k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catena-api
  namespace: catena
  labels:
    app: catena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catena-api
  template:
    metadata:
      labels:
        app: catena-api
    spec:
      imagePullSecrets:
      - name: headless-commerce-package-access-token
      containers:
      - name: catena-api
        image: ghcr.io/headless-commerce/catena_api
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /health/live
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: catena-api
  namespace: catena
spec:
  ports:
  - name: web
    port: 80
    targetPort: 4000
  selector:
    app: catena-api
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catena-api-web
  namespace: catena
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`api.catena.com.ng`)
    services:
    - name: catena-api
      port: 80
    middlewares:
    - name: security
      namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catena-api-web-tls
  namespace: catena
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`api.catena.com.ng`)
    services:
    - name: catena-api
      port: 80
    middlewares:
    - name: security
      namespace: default
  tls:
    certResolver: le
    domains:
    - main: "catena.com.ng"
      sans:
      - "*.catena.com.ng"
    options:
      name: mytlsoption
      namespace: default
